--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
             android:name="com.braze.advancedsamples.BrazeDemoApplication"
             android:theme="@style/Theme.BrazeAdvancedSamples">
         <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
                 android:theme="@style/Theme.BrazeAdvancedSamples.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
